# robot

devel/: .catkin  .rosinstall  setup.sh
devel/include/hector_mapping/: HectorDebugInfo.h  HectorIterData.h
devel/include/robot_controller/: SpeedUVW.h
devel/lib/hector_compressed_map_transport/: map_to_image_node
devel/lib/hector_geotiff/: geotiff_node  geotiff_saver
devel/lib/hector_imu_attitude_to_tf/: imu_attitude_to_tf_node
devel/lib/hector_imu_tools/: pose_and_orientation_to_imu_node
devel/lib/hector_map_server/: hector_map_server
devel/lib/hector_mapstitch/: mapstitch_tool  ros_mapstitch
devel/lib/hector_trajectory_server/: hector_trajectory_server
devel/lib/pkgconfig/: hector_compressed_map_transport.pc  hector_geotiff.pc  hector_geotiff_plugins.pc  hector_imu_attitude_to_tf.pc  hector_imu_tools.pc  hector_map_server.pc  hector_map_tools.pc  hector_mapping.pc  hector_mapstitch.pc  hector_marker_drawing.pc  hector_nav_msgs.pc  hector_slam_launch.pc  hector_trajectory_server.pc  robot_controller.pc  teleop_vector3_keyboard.pc  xv_11_laser_driver.pc
devel/lib/python2.7/dist-packages/robot_controller/msg/: _SpeedUVW.py  __init__.py
devel/lib/robot_controller/: arm_driverUSB  base_driver  base_driverUSB  robot
devel/lib/xv_11_laser_driver/: neato_laser_publisher
devel/share/common-lisp/ros/hector_nav_msgs/srv/: _package.lisp  hector_nav_msgs-srv.asd
devel/share/common-lisp/ros/robot_controller/msg/: SpeedUVW.lisp  _package.lisp  _package_SpeedUVW.lisp  robot_controller-msg.asd
devel/share/hector_compressed_map_transport/cmake/: hector_compressed_map_transportConfig.cmake
devel/share/hector_geotiff/cmake/: hector_geotiffConfig.cmake
devel/share/hector_geotiff_plugins/cmake/: hector_geotiff_pluginsConfig.cmake
devel/share/hector_imu_attitude_to_tf/cmake/: hector_imu_attitude_to_tfConfig.cmake
devel/share/hector_imu_tools/cmake/: hector_imu_toolsConfig.cmake
devel/share/hector_map_server/cmake/: hector_map_serverConfig.cmake
devel/share/hector_map_tools/cmake/: hector_map_toolsConfig.cmake
devel/share/hector_mapping/cmake/: hector_mapping-msg-extras.cmake  hector_mapping-msg-paths.cmake  hector_mappingConfig.cmake
devel/share/hector_mapstitch/cmake/: hector_mapstitchConfig.cmake
devel/share/hector_marker_drawing/cmake/: hector_marker_drawingConfig.cmake
devel/share/hector_nav_msgs/cmake/: hector_nav_msgs-msg-extras.cmake  hector_nav_msgsConfig.cmake
devel/share/hector_slam_launch/cmake/: hector_slam_launchConfig.cmake
devel/share/hector_trajectory_server/cmake/: hector_trajectory_serverConfig.cmake
devel/share/robot_controller/cmake/: robot_controller-msg-extras.cmake  robot_controller-msg-paths.cmake  robot_controllerConfig.cmake
devel/share/teleop_vector3_keyboard/cmake/: teleop_vector3_keyboardConfig.cmake
devel/share/xv_11_laser_driver/cmake/: xv_11_laser_driverConfig.cmake
src/hector_mapstitch/src/: rosmain.cpp
src/hector_slam/hector_compressed_map_transport/src/: map_to_image_node.cpp
src/hector_slam/hector_geotiff/src/: geotiff_node.cpp  geotiff_saver.cpp
src/hector_slam/hector_imu_attitude_to_tf/src/: imu_attitude_to_tf_node.cpp
src/hector_slam/hector_imu_tools/src/: pose_and_orientation_to_imu_node.cpp
src/hector_slam/hector_map_server/src/: hector_map_server.cpp
src/hector_slam/hector_mapping/include/hector_slam_lib/map/: GridMapCacheArray.h  OccGridMapBase.h  OccGridMapUtil.h
src/hector_slam/hector_mapping/include/hector_slam_lib/matcher/: ScanMatcher.h
src/hector_slam/hector_mapping/include/hector_slam_lib/slam_main/: MapRepMultiMap.h  MapRepSingleMap.h
src/hector_slam/hector_mapping/launch/: mapping_default.launch
src/hector_slam/hector_mapping/src/: HectorMappingRos.cpp  HectorMappingRos.h  PoseInfoContainer.cpp  PoseInfoContainer.h
src/hector_slam/hector_slam_launch/launch/: neato.launch
src/hector_slam/hector_trajectory_server/src/: hector_trajectory_server.cpp
src/robot_controller/: CMakeLists.txt  package.xml
src/robot_controller/include/: ArmKinematicModel.h  BaseKinematicModel.h  Controller.h  DummyController.h  EKF.h  KinematicModel.h  PController.h  Robot.h  Transmission.h  sosdata.h
src/robot_controller/launch/: Orbital_ECI_2_2.txt  Orbital_ECI_3_1.txt  Orbital_ECI_3_2.txt  Orbital_ECI_3_3.txt  default_mapping_robot3.launch  default_mapping_robot4.launch  default_mapping_robot5.launch  default_mapping_robot7.launch  geotiff_mapper_robot3.launch  geotiff_mapper_robot4.launch  geotiff_mapper_robot5.launch  geotiff_mapper_robot7.launch  ift_amcl.launch  ift_amcl_map.launch  ift_amcl_tf.launch  ift_baselidar.launch  ift_mapstitch3_5.launch  ift_mapstitch4_3.launch  ift_mapstitch5_3.launch  ift_mapstitch5_4.launch  ift_mapstitch5_7_4_3.launch  ift_mapstitch7_3.launch  ift_mapstitch7_4.launch  ift_mapstitch7_5.launch  ift_robot_control.launch  ift_robot_control3.launch  ift_robot_control4.launch  ift_robot_control5.launch  ift_robot_control5_7_4_3.launch  ift_robot_control7.launch  ift_rviz.launch  ift_rviz_robot5_7_4_3.launch  ift_slam.launch  ift_slam3.launch  ift_slam3lead.launch  ift_slam4.launch  ift_slam4lead.launch  ift_slam5.launch  ift_slam5_7_4_3.launch  ift_slam5lead.launch  (+2 more)
src/robot_controller/map/: map.pgm  map.yaml  map10.pgm  map10.yaml  map5.pgm  map5.yaml
src/robot_controller/msg/: SpeedUVW.msg
src/robot_controller/rviz/: SOT.rviz
src/robot_controller/src/: ArmDriverUSB.cpp  ArmKinematicModel.cpp  BaseDriver.cpp  BaseDriverUSB.cpp  BaseKinematicModel.cpp  Controller.cpp  DummyController.cpp  KinematicModel.cpp  PController.cpp  Robot.cpp  Transmission.cpp  lidartest.py  teleop_vector3_keyboard.py
src/teleop_vector3_keyboard/: CMakeLists.txt  package.xml  teleop_vector3_keyboard.py
src/teleop_vector3_keyboard/.kdev4/: teleop_twist_keyboard.kdev4
